<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    tools:context=".activities.CreateContentActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/create_content_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_arrow_back_white_24dp"
        app:titleTextColor="#FFFFFF" />

    <ScrollView
        android:id="@+id/create_content_scrollview"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:keepScreenOn="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/create_content_toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                app:cardCornerRadius="24dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/create_content_imageView"
                        android:layout_width="match_parent"
                        android:layout_height="256dp"
                        android:background="#5CFFFFFF"
                        android:contentDescription="@string/content_description"
                        android:drawingCacheQuality="auto"
                        android:scaleType="centerCrop"
                        app:srcCompat="@color/common_google_signin_btn_text_dark_default" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/create_content_add_image"
                            style="@style/Widget.AppCompat.Button.Borderless"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="-5dp"
                            android:layout_marginTop="-5dp"
                            android:layout_marginRight="-5dp"
                            android:layout_marginBottom="-5dp"
                            android:layout_weight="2"
                            android:text="@string/str_add_image"
                            android:textColor="@color/primaryColor"
                            android:textStyle="bold" />

                        <Button
                            android:id="@+id/create_content_open_camera"
                            style="@style/Widget.AppCompat.Button.Borderless"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="-5dp"
                            android:layout_marginTop="-5dp"
                            android:layout_marginRight="-5dp"
                            android:layout_marginBottom="-5dp"
                            android:layout_weight="2"
                            android:text="@string/str_open_gallery"
                            android:textColor="@color/primaryColor"
                            android:textStyle="bold" />
                    </LinearLayout>

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/str_titulo"
                android:textSize="30sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/create_content_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="-4dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/background_editext_default"
                android:ems="10"
                android:gravity="start|fill"
                android:hint="@string/str_titulo_hint"
                android:importantForAutofill="no"
                android:inputType="textMultiLine"
                android:paddingLeft="14dp"
                android:paddingTop="7dp"
                android:paddingRight="14dp"
                android:paddingBottom="7dp"
                android:scrollbars="vertical" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/str_texto"
                android:textSize="24sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/create_content_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="-4dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="64dp"
                android:background="@drawable/background_editext_default"
                android:ems="10"
                android:gravity="clip_vertical|fill_horizontal"
                android:hint="@string/str_texto"
                android:importantForAutofill="no"
                android:inputType="textMultiLine"
                android:paddingLeft="14dp"
                android:paddingTop="7dp"
                android:paddingRight="14dp"
                android:paddingBottom="7dp"
                android:scrollbars="vertical" />

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/create_content_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="96dp"
        android:background="@drawable/rounded_background"
        android:backgroundTint="@color/primaryColor"
        android:elevation="16dp"
        android:padding="16dp"
        android:text="@string/str_criar_conteudo"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/create_content_scrollview" />

</androidx.constraintlayout.widget.ConstraintLayout>